--- a/sbst2016_position.html
+++ b/sbst2016_position.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Crowd-Sourcing Conundrum: A Look into Google's Drawbacks
+    <title>
     </title>
 
     <meta name="description" content="Presentation 1 for FS102">
@@ -50,9 +50,9 @@
 
       <div class="slides">
 
-        <section data-background-transition="none" data-background="images/613445810_95f712caa1_o.jpg" style="background: rgba(29,31,33,0.9)">
-          <h1>Crowd-Sourcing Conundrum</h1>
-          <h2>A Look Into Google's Drawbacks</h2>
+        <section data-background-transition="none" data-background="images/piracy.jpg" style="background: rgba(29,31,33,0.9)">
+          <h1>A Look Into the World of Digital Piracy</h1>
+
           <p>Taylor Redman</p>
 
          <br /><small><a title="Crowd" href="https://flickr.com/photos/jamescridland/613445810">Crowd</a> flickr photo by <a href="https://flickr.com/people/jamescridland">James Cridland</a> shared under a <a href="https://creativecommons.org/licenses/by/2.0/">Creative Commons (BY) license</a> </small>
