--- a/sbst2016_position.html
+++ b/sbst2016_position.html
@@ -55,10 +55,10 @@
 
           <p>Taylor Redman</p>
 
-         <br /><small><a title="Crowd" href="https://flickr.com/photos/jamescridland/613445810">Crowd</a> flickr photo by <a href="https://flickr.com/people/jamescridland">James Cridland</a> shared under a <a href="https://creativecommons.org/licenses/by/2.0/">Creative Commons (BY) license</a> </small>
+         <br /><a title="MS-DOS Green 3 Underexposed" href="https://flickr.com/photos/kjetikor/8483021009">MS-DOS Green 3 Underexposed</a> flickr photo by <a href="https://flickr.com/people/kjetikor">kjetikor</a> shared under a <a href="https://creativecommons.org/licenses/by-nc/2.0/">Creative Commons (BY-NC) license</a> </small>
         </section>
 
-        <section data-background-transition="none" data-background="navy">
+        <section data-background-transition="none" data-background="images/computer.jpg" style="background: rgba(29,31,33,0.9)">
           <h1><b class="white">Google's Power</b></h1>
           <p class="fragment"><b class="white">A leader in free, consumer friendly software</b></p>
           <p class="fragment"><b class="white">Applications are useful tools</b></p>
