--- a/sbst2016_position.html
+++ b/sbst2016_position.html
@@ -59,9 +59,9 @@
         </section>
 
         <section data-background-transition="none" data-background="images/computer.jpg" style="background: rgba(29,31,33,0.9)">
-          <h1><b class="white">Google's Power</b></h1>
-          <p class="fragment"><b class="white">A leader in free, consumer friendly software</b></p>
-          <p class="fragment"><b class="white">Applications are useful tools</b></p>
+          <h1><b class="white">What is Digital Piracy?</b></h1>
+          <p class="fragment"><b class="white">Digital piracy is a form of online piracy and includes the unauthorized online distribution of electronic copies of copyrighted material such as software, movies, and music.</b></p>
+          
         </section>
 
         <section data-background-transition="none" data-background="images/6841389103_81f693cfe8_o.jpg" style="background: rgba(29,31,33,0.9)">
