--- a/sbst2016_position.html
+++ b/sbst2016_position.html
@@ -61,13 +61,14 @@
         <section data-background-transition="none" data-background="images/computer.jpg" style="background: rgba(29,31,33,0.9)">
           <h1><b class="white">What is Digital Piracy?</b></h1>
           <p class="fragment"><b class="white">Digital piracy is a form of online piracy and includes the unauthorized online distribution of electronic copies of copyrighted material such as software, movies, and music.</b></p>
-          
+
+         <br /><a title="Longmont Power and Communications-63" href="https://flickr.com/photos/youbelonginlongmont/7981126390"><img src="https://farm9.static.flickr.com/8462/7981126390_a78080b5c6.jpg" /></a><br /><small><a title="Longmont Power and Communications-63" href="https://flickr.com/photos/youbelonginlongmont/7981126390">Longmont Power and Communications-63</a> flickr photo by <a href="https://flickr.com/people/youbelonginlongmont">You Belong In Longmont</a> shared under a <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/">Creative Commons (BY-NC-ND) license</a> </small>
         </section>
 
-        <section data-background-transition="none" data-background="images/6841389103_81f693cfe8_o.jpg" style="background: rgba(29,31,33,0.9)">
-          <h1><b class="green">Loopholes in the System</b></h1>
-          <p class="fragment">Apps that allow user generated content have few regulations</p>
-          <p class="fragment">Users can add anything that they want</p>
+        <section data-background-transition="none" data-background="gray" style="background: rgba(29,31,33,0.9)">
+          <h1><b class="red">Affected Demographic</b></h1>
+          <p class="fragment"><b class="white">Apps that allow user generated content have few regulations</p>
+          <p class="fragment"><b class="white">Users can add anything that they want</p>
 
 
           <br /><small><a title="And There's a Big Gaping Hole in My Heart" href="https://flickr.com/photos/thomashawk/6841389103">And There's a Big Gaping Hole in My Heart</a> flickr photo by <a href="https://flickr.com/people/thomashawk">Thomas Hawk</a> shared under a <a href="https://creativecommons.org/licenses/by-nc/2.0/">Creative Commons (BY-NC) license</a> </small>
