--- a/sbst2016_position.html
+++ b/sbst2016_position.html
@@ -67,7 +67,7 @@
 
         <section data-background-transition="none" data-background="gray" style="background: rgba(29,31,33,0.9)">
           <h1><b class="red">Affected Demographic</b></h1>
-          <p class="fragment"><b class="white">80 of the students do not see any problem with downloading music from the Internet without paying for it</p>
+          <p class="fragment"><b class="white">80 of the students do not see any problem with downloading music from the Internet without paying for it</b></p>
 
         </section>
 
