--- a/sbst2016_position.html
+++ b/sbst2016_position.html
@@ -72,15 +72,15 @@
         </section>
 
 
-        <section data-background-transition="none" data-background="images/2222010475_bf9df29557_o.jpg" style="background: rgba(29,31,33,0.9)">
-          <h1><b class="white">Trouble with Maps</b></h1>
+        <section data-background-transition="none" data-background="darkblue" style="background: rgba(29,31,33,0.9)">
+          <h1><b class="white">Solutions</b></h1>
 
 
-          <p class="fragment"><b class="yellow">Can be updated on the fly</b></p>
-          <p class="fragment"><b class="yellow">Users created fake locations and changed street names</b></p>
-          <p class="fragment"><b class="yellow">Google knows that Maps is broken</b></p>
+          <p class="fragment"><b class="white">Limit the restrcitions on piracy</b></p>
+          <p class="fragment"><b class="yellow">Let artists independently go after people who pirate content instead of making it a federal crime</b></p>
 
-          <br /><small><a title="road" href="https://flickr.com/photos/jay_erickson/2222010475">road</a> flickr photo by <a href="https://flickr.com/people/jay_erickson">Jay Erickson</a> shared under a <a href="https://creativecommons.org/licenses/by/2.0/">Creative Commons (BY) license</a> </small>
+
+          
         </section>
 
         <section data-background-transition="none" data-background="darkblue" >
