--- a/sbst2016_position.html
+++ b/sbst2016_position.html
@@ -77,10 +77,10 @@
 
 
           <p class="fragment"><b class="white">Limit the restrcitions on piracy</b></p>
-          <p class="fragment"><b class="yellow">Let artists independently go after people who pirate content instead of making it a federal crime</b></p>
+          <p class="fragment"><b class="white">Let artists independently go after people who pirate content instead of making it a federal crime</b></p>
 
 
-          
+
         </section>
 
         <section data-background-transition="none" data-background="darkblue" >
