--- a/sbst2016_position.html
+++ b/sbst2016_position.html
@@ -83,11 +83,11 @@
 
         </section>
 
-        <section data-background-transition="none" data-background="darkblue" >
-          <h1><b class="white">Traffic Control</b></h1>
-          <p class="fragment"><b class="white">Data is not uploaded by users</b></p>
-          <p class="fragment"><b class="white">Information is continuously updated as people use the applications</b></p>
-          <p class="fragment"><b class="white">Less risk involved</b></p>
+        <section data-background-transition="none" data-background="images/keyboard.jpg" style="background: rgba(29,31,33,0.9)" >
+          <h1><b class="white">Good or Bad?</b></h1>
+          <p class="fragment"><b class="white">Piracy prohibits artists and software developers from getting the money and recognition they deserve</b></p>
+          <p class="fragment"><b class="white">The distribution of pirated content helps with exposure and makes people's work available to a larger audience</b></p>
+          
 
         </section>
 
