--- a/sbst2016_position.html
+++ b/sbst2016_position.html
@@ -87,16 +87,16 @@
           <h1><b class="white">Good or Bad?</b></h1>
           <p class="fragment"><b class="white">Piracy prohibits artists and software developers from getting the money and recognition they deserve</b></p>
           <p class="fragment"><b class="white">The distribution of pirated content helps with exposure and makes people's work available to a larger audience</b></p>
-          
+
+          <br /><a title="Computer Keyboard" href="https://flickr.com/photos/marciecasas/5347580266">Computer Keyboard</a> flickr photo by <a href="https://flickr.com/people/marciecasas">Marcie Casas</a> shared under a <a href="https://creativecommons.org/licenses/by/2.0/">Creative Commons (BY) license</a> </small>
 
         </section>
 
         <section>
-          <h1>References</h1>
-          <p class="fragment">https://sites.google.com/site/mapmakerpedia/maps-101/collaborative-mapping-crowdsourcing</p>
+          <h1>Reference</h1>
+          <p class="fragment">Altschuller and Benbunan-Fich, Is Music Downloading the New Prohibition? What Students Reveal through an Ethical Dilemma</p>
 
-          <p class="fragment">http://www.businessinsider.com/how-google-maps-knows-about-traffic-2015-11</p>
-          <p class="fragment">https://www.nytimes.com/2016/01/31/business/fake-online-locksmiths-may-be-out-to-pick-your-pocket-too.html?_r=1</p>
+
         </section>
 
 
